                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 08-06-2005 fixed: OutputToAllSpeakers didn't work with when AC3 Output was enabled on 2ch AC3 files
 - 06-06-2005 changed: VSync now always on.
 - 06-06-2005 added: dll_fprintf() initial code for writing text files from dll's.
 - 06-06-2005 changed: Updated OpenForWrite() to open with overwrite if requested.
 - 06-06-2005 fixed: FileZip Read() missed last chunk if read chunksize was small.
 - 06-06-2005 updated: Hungarian language file (Thnx to tcsizmadia)
 - 06-06-2005 fixed: mplayer may crash when playback ends (updated again)
 - 06-06-2005 fixed: item is highlighted as playing when the start of a song fails
 - 06-06-2005 fixed: .cue sheets would loop indefinitely on the last two tracks.
 - 06-06-2005 fixed: Source of the below crash (urlset out of range in rsscontrol), + updated PM3 to suit the new system.
 - 06-06-2005 fixed: added missing !--> to the rss comments in Xboxmediacenter.xml (fixes serious crash)
 - 06-06-2005 fixed: some legal fat-x chars were not in the list - thanks to yoci!
 - 06-06-2005 changed: moved rss specifications to xboxmediacenter.xml and added url sets.
 - 06-06-2005 changed: removed libmp4 linkage. reduces xbe with ~ 110kb
 - 06-06-2005 added: sf.net patch [1215111] Fast AAC/MP4 tag retrieval - thanks to arnie pie!
 - 05-06-2005 changed: Cleaned up use of CUtil::cmpnocase, replacing with strcmpi throughout.
 - 05-06-2005 added: Combined spectrums into a single .vis with presets, changeable on the fly.
 - 05-06-2005 fixed: dvdplayer would fail to play from scrambled disc untill mplayer had once played it
 - 05-06-2005 fixed: XBMC would sometimes lockup during FF/RW when using Hardware Overlays